Upgrading the quarkus version and S-125 to official