@@ -16,15 +16,20 @@
 
 package org.niord.uk.s125.utils;
 
-import _int.iala_aism.s125.gml._0_0.AggregationType;
-import _int.iala_aism.s125.gml._0_0.S100TruncatedDate;
-import _int.iala_aism.s125.gml._0_0.*;
-import _int.iho.s100.gml.base._5_0.AbstractFeatureType;
 import _int.iho.s100.gml.base._5_0.CurveType;
 import _int.iho.s100.gml.base._5_0.PointType;
 import _int.iho.s100.gml.base._5_0.SurfaceType;
 import _int.iho.s100.gml.base._5_0.*;
-import _net.opengis.gml.profiles.*;
+import _int.iho.s100.gml.base._5_0.impl.CurveTypeImpl;
+import _int.iho.s100.gml.base._5_0.impl.PointTypeImpl;
+import _int.iho.s100.gml.base._5_0.impl.SurfaceTypeImpl;
+import _int.iho.s100.gml.base._5_0.impl.*;
+import _int.iho.s100.gml.profiles._5_0.*;
+import _int.iho.s100.gml.profiles._5_0.impl.*;
+import _int.iho.s125.gml.cs0._1.S100TruncatedDate;
+import _int.iho.s125.gml.cs0._1.*;
+import _int.iho.s125.gml.cs0._1.impl.*;
+import _int.iho.s125.gml.cs0._1.impl.S100TruncatedDateImpl;
 import org.apache.commons.lang3.StringUtils;
 import org.grad.eNav.s125.utils.S125Utils;
 import org.locationtech.jts.geom.Coordinate;
@@ -37,9 +42,7 @@ import org.niord.core.aton.AtonTag;
 import org.niord.uk.s125.models.S125AtonTypes;
 import org.niord.uk.s125.models.S125DatasetInfo;
 
-import jakarta.xml.bind.JAXBElement;
-
-import java.math.BigDecimal;
+import java.lang.Boolean;
 import java.math.BigInteger;
 import java.time.LocalDate;
 import java.time.LocalDateTime;
@@ -88,13 +91,17 @@ public class S125DatasetBuilder {
      */
     protected static final String ASSOCIATION_REF_ARCHOLE = "urn:IALA:S125:roles:association";
 
+    /*
+     * The standard AtoN Status reference archole.
+     */
+    protected static final String ATON_STATUS_REF_ARCHOLE = "urn:IALA:S125:roles:atonStatus";
+
     // Class Variables
     private String idFormat;
     private AtomicInteger idIndex;
     private Map<Integer, String> idMap;
     private HashSet<Integer> linksSet;
-    private _int.iala_aism.s125.gml._0_0.ObjectFactory s125GMLFactory;
-    private _net.opengis.gml.profiles.ObjectFactory opengisGMLFactory;
+    private _int.iho.s100.gml.profiles._5_0.ObjectFactory opengisGMLFactory;
 
     /**
      * Class Constructor.
@@ -104,8 +111,7 @@ public class S125DatasetBuilder {
         this.idIndex = new AtomicInteger(1);
         this.idMap = new HashMap<>();
         this.linksSet = new HashSet<>();
-        this.s125GMLFactory = new _int.iala_aism.s125.gml._0_0.ObjectFactory();
-        this.opengisGMLFactory = new _net.opengis.gml.profiles.ObjectFactory();
+        this.opengisGMLFactory = new _int.iho.s100.gml.profiles._5_0.ObjectFactory();
     }
     
     /**
@@ -123,7 +129,7 @@ public class S125DatasetBuilder {
         this.idFormat = String.format("ID%%0%dd", Math.max(1, String.format("%d", atonNodes.size()).length() + 2));
 
         // Initialise the Dataset
-        Dataset s125Dataset = new Dataset();
+        Dataset s125Dataset = new DatasetImpl();
         s125Dataset.setId(DatasetInfo.getDatasetId());
 
         //====================================================================//
@@ -134,7 +140,7 @@ public class S125DatasetBuilder {
         //====================================================================//
         //                  Dataset IDENTIFICATION SECTION                    //
         //====================================================================//
-        DataSetIdentificationType DatasetIdentificationType = new DataSetIdentificationType();
+        DataSetIdentificationType DatasetIdentificationType = new DataSetIdentificationTypeImpl();
         DatasetIdentificationType.setEncodingSpecification(DatasetInfo.getEncodingSpecification());
         DatasetIdentificationType.setEncodingSpecificationEdition(DatasetInfo.getEncodingSpecificationEdition());
         DatasetIdentificationType.setProductIdentifier(DatasetInfo.getProductionIdentifier());
@@ -149,7 +155,7 @@ public class S125DatasetBuilder {
         //====================================================================//
         //                      Dataset MEMBERS SECTION                       //
         //====================================================================//
-        Optional.ofNullable(atonNodes)
+        S125Utils.addDatasetMembers(s125Dataset, Optional.ofNullable(atonNodes)
                 .orElse(Collections.emptyList())
                 .stream()
                 .flatMap(aton ->
@@ -159,8 +165,7 @@ public class S125DatasetBuilder {
                             this.generateAidsToNavigationLinks(aton).stream()
                     ).flatMap(i -> i)
                 )
-                .map(jaxb -> { MemberType m = new MemberType(); m.setAbstractFeature(jaxb); return m; })
-                .forEach(s125Dataset.getImembersAndMembers()::add);
+                .toList());
 
         // Return the Dataset
         return s125Dataset;
@@ -175,7 +180,7 @@ public class S125DatasetBuilder {
      * @param atonNode      The Niord AtoN node object
      * @return The generated S-125 data message
      */
-    public JAXBElement<? extends AbstractFeatureType> generateAidsToNavigation(AtonNode atonNode) {
+    public AbstractGMLType generateAidsToNavigation(AtonNode atonNode) {
         // First read the AtoN type information from the input
         S125AtonTypes atonType = S125AtonTypes.fromSeamarkType(atonNode.getTagValue(TAG_ATON_TYPE));
         // Fix for AIS stations
@@ -183,96 +188,65 @@ public class S125DatasetBuilder {
             atonType = S125AtonTypes.PHYSICAL_AIS_ATON;
         }
         // Now initialise the JAXB object factory to generate the member
-        JAXBElement<? extends AidsToNavigationType> jaxbElement =  null;
-        // Handle each possible type, cause a different object should be created
-        switch(atonType) {
-            /***************************
-             *    STRUCTURE OBJECTS    *
-             ***************************/
-            case CARDINAL_BEACON:
-                jaxbElement = this.s125GMLFactory.createBeaconCardinal(this.generateBeaconCardinal(atonNode));
-                break;
-            case LATERAL_BEACON:
-                jaxbElement = this.s125GMLFactory.createBeaconLateral(this.generateBeaconLateral(atonNode));
-                break;
-            case ISOLATED_DANGER_BEACON:
-                jaxbElement = this.s125GMLFactory.createBeaconIsolatedDanger(this.generateBeaconIsolatedDanger(atonNode));
-                break;
-            case SAFE_WATER_BEACON:
-                jaxbElement = this.s125GMLFactory.createBeaconSafeWater(this.generateBeaconSafeWater(atonNode));
-                break;
-            case SPECIAL_PURPOSE_BEACON:
-                jaxbElement = this.s125GMLFactory.createBeaconSpecialPurposeGeneral(this.generateBeaconSpecialPurpose(atonNode));
-                break;
-            case CARDINAL_BUOY:
-                jaxbElement = this.s125GMLFactory.createBuoyCardinal(this.generateBuoyCardinal(atonNode));
-                break;
-            case LATERAL_BUOY:
-                jaxbElement = this.s125GMLFactory.createBuoyLateral(this.generateBuoyLateral(atonNode));
-                break;
-            case INSTALLATION_BUOY:
-                jaxbElement = this.s125GMLFactory.createBuoyInstallation(this.generateBuoyInstallation(atonNode));
-                break;
-            case ISOLATED_DANGER_BUOY:
-                jaxbElement = this.s125GMLFactory.createBuoyIsolatedDanger(this.generateBuoyIsolatedDanger(atonNode));
-                break;
-            case SAFE_WATER_BUOY:
-                jaxbElement = this.s125GMLFactory.createBuoySafeWater(this.generateBuoySafeWater(atonNode));
-                break;
-            case SPECIAL_PURPOSE_BUOY:
-                jaxbElement = this.s125GMLFactory.createBuoySpecialPurposeGeneral(this.generateBuoySpecialPurpose(atonNode));
-                break;
-            case LANDMARK:
-                jaxbElement = this.s125GMLFactory.createLandmark(this.generateLandmark(atonNode));
-                break;
-            case LIGHTHOUSE:
-                jaxbElement = this.s125GMLFactory.createLighthouse(this.generateLighthouse(atonNode));
-                break;
-            case LIGHT_VESSEL:
-                jaxbElement = this.s125GMLFactory.createLightVessel(this.generateLightVessel(atonNode));
-                break;
-            case VIRTUAL_ATON:
-                jaxbElement = this.s125GMLFactory.createVirtualAISAidToNavigation(this.generateVirtualAtoN(atonNode));
-                break;
-            /***************************
-             *    EQUIPMENT OBJECTS    *
-             ***************************/
-            case DAYMARK:
-                jaxbElement = this.s125GMLFactory.createDaymark(this.generateDaymark(atonNode));
-                break;
-            case ENVIRONMENT_OBSERVATION:
-                jaxbElement = this.s125GMLFactory.createEnvironmentObservationEquipment(this.generateEnvironmentObservationEquipment(atonNode));
-                break;
-            case FOG_SIGNAL:
-                jaxbElement = this.s125GMLFactory.createFogSignal(this.generateFogSignal(atonNode));
-                break;
-            case LIGHT:
-                jaxbElement = this.s125GMLFactory.createLight(this.generateLight(atonNode));
-                break;
-            case RADAR_REFLECTOR:
-                jaxbElement = this.s125GMLFactory.createRadarReflector(this.generateRadarReflector(atonNode));
-                break;
-            case RETRO_REFLECTOR:
-                jaxbElement = this.s125GMLFactory.createRetroReflector(this.generateRetroReflector(atonNode));
-                break;
-            case SILOS_AND_TANKS:
-                jaxbElement = this.s125GMLFactory.createSiloTank(this.generateSiloTank(atonNode));
-                break;
-            case TOPMARK:
-                jaxbElement = this.s125GMLFactory.createTopmark(this.generateTopmark(atonNode));
-                break;
-            case RADIO_STATION:
-                jaxbElement = this.s125GMLFactory.createRadioStation(this.generateRadioStation( atonNode));
-                break;
-            case RADAR_TRANSPONDER:
-                jaxbElement = this.s125GMLFactory.createRadarTransponderBeacon(this.generateRadarTransponderBeacon( atonNode));
-                break;
-            case PHYSICAL_AIS_ATON:
-                jaxbElement = this.s125GMLFactory.createPhysicalAISAidToNavigation(this.generatePhysicalAISAtoN(atonNode));
-                break;
-        }
-        // And return what was generated
-        return jaxbElement;
+        return switch (atonType) {
+            //=========================//
+            //    STRUCTURE OBJECTS    //
+            //=========================//
+            case CARDINAL_BEACON ->
+                    this.generateBeaconCardinal(atonNode);
+            case LATERAL_BEACON ->
+                    this.generateBeaconLateral(atonNode);
+            case ISOLATED_DANGER_BEACON ->
+                    this.generateBeaconIsolatedDanger(atonNode);
+            case SAFE_WATER_BEACON ->
+                    this.generateBeaconSafeWater(atonNode);
+            case SPECIAL_PURPOSE_BEACON ->
+                    this.generateBeaconSpecialPurpose(atonNode);
+            case CARDINAL_BUOY ->
+                    this.generateBuoyCardinal(atonNode);
+            case LATERAL_BUOY ->
+                    this.generateBuoyLateral(atonNode);
+            case INSTALLATION_BUOY ->
+                    this.generateBuoyInstallation(atonNode);
+            case ISOLATED_DANGER_BUOY ->
+                    this.generateBuoyIsolatedDanger(atonNode);
+            case SAFE_WATER_BUOY ->
+                    this.generateBuoySafeWater(atonNode);
+            case SPECIAL_PURPOSE_BUOY ->
+                    this.generateBuoySpecialPurpose(atonNode);
+            case LANDMARK ->
+                    this.generateLandmark(atonNode);
+            case LIGHTHOUSE ->
+                    this.generateLighthouse(atonNode);
+            case LIGHT_VESSEL ->
+                    this.generateLightVessel(atonNode);
+            case VIRTUAL_ATON ->
+                    this.generateVirtualAtoN(atonNode);
+            //=========================//
+            //    EQUIPMENT OBJECTS    //
+            //=========================//
+            case DAYMARK ->
+                    this.generateDaymark(atonNode);
+            case FOG_SIGNAL ->
+                    this.generateFogSignal(atonNode);
+            case LIGHT ->
+                    this.generateLight(atonNode);
+            case RADAR_REFLECTOR ->
+                    this.generateRadarReflector(atonNode);
+            case RETRO_REFLECTOR ->
+                    this.generateRetroReflector(atonNode);
+            case SILOS_AND_TANKS ->
+                    this.generateSiloTank(atonNode);
+            case TOPMARK ->
+                    this.generateTopmark(atonNode);
+            case RADIO_STATION ->
+                    this.generateRadioStation(atonNode);
+            case RADAR_TRANSPONDER ->
+                    this.generateRadarTransponderBeacon(atonNode);
+            case PHYSICAL_AIS_ATON ->
+                    this.generatePhysicalAISAtoN(atonNode);
+            default -> null;
+        };
     }
 
     /**
@@ -283,14 +257,14 @@ public class S125DatasetBuilder {
      * @param atonNode      The AtoN node to generate the aggregation/association links for
      * @return the generated collection of aggregation/association links
      */
-    public Collection<JAXBElement<? extends AbstractFeatureType>> generateAidsToNavigationLinks(AtonNode atonNode) {
+    public Collection<AbstractGMLType> generateAidsToNavigationLinks(AtonNode atonNode) {
         // Sanity Check
         if(atonNode == null || atonNode.getLinks() == null || atonNode.getLinks().isEmpty()) {
             return Collections.emptyList();
         }
 
         // Create a new link collection
-        final List<JAXBElement<? extends AbstractFeatureType>> linkCollection = new ArrayList<>();
+        final List<AbstractGMLType> linkCollection = new ArrayList<>();
 
         // Add the aggregation links
         atonNode.getLinks().stream()
@@ -298,7 +272,6 @@ public class S125DatasetBuilder {
                 .filter(not(link -> this.linksSet.contains(link.getId())))
                 .map(this::generateAggregation)
                 .filter(Objects::nonNull)
-                .map(this.s125GMLFactory::createAggregation)
                 .forEach(linkCollection::add);
 
         // Add the association links
@@ -307,7 +280,6 @@ public class S125DatasetBuilder {
                 .filter(not(link -> this.linksSet.contains(link.getId())))
                 .map(this::generateAssociation)
                 .filter(Objects::nonNull)
-                .map(this.s125GMLFactory::createAssociation)
                 .forEach(linkCollection::add);
 
         // Add the link IDs to the link-set so that they don't get duplicated
@@ -326,8 +298,8 @@ public class S125DatasetBuilder {
      * @param atonNode      The AtoN node to be used for the member
      * @return The S-125 Dataset member section generated
      */
-    protected BeaconCardinalType generateBeaconCardinal(AtonNode atonNode) {
-        final BeaconCardinalType member = new BeaconCardinalType();
+    protected BeaconCardinal generateBeaconCardinal(AtonNode atonNode) {
+        final BeaconCardinal member = new BeaconCardinalImpl();
         final String tagKeyPrefix = "seamark:beacon_cardinal:";
         final String s125TagKeyPrefix = "s125:aidsToNavigation:generic_beacon:";
         this.populateS125AidsToNavigationFields(member, atonNode);
@@ -350,7 +322,7 @@ public class S125DatasetBuilder {
                 .map(atonNode::getTag)
                 .map(AtonTag::getV)
                 .filter(StringUtils::isNotBlank)
-                .map(BigDecimal::new)
+                .map(Double::parseDouble)
                 .orElse(null));
         member.setMarksNavigationalSystemOf(Optional.of(tagKeyPrefix+"system")
                 .map(atonNode::getTag)
@@ -362,23 +334,15 @@ public class S125DatasetBuilder {
                 .map(AtonTag::getV)
                 .map(S125EnumParser::parseNatureOfConstruction)
                 .orElse(null));
-        member.setObjectName(Optional.of("seamark:name")
-                .map(atonNode::getTag)
-                .map(AtonTag::getV)
-                .orElse(null));
-        member.setObjectNameInNationalLanguage(Optional.of("seamark:name")
-                .map(atonNode::getTag)
-                .map(AtonTag::getV)
-                .orElse(null));
         member.setRadarConspicuous(Optional.of(s125TagKeyPrefix+"radar_conspicuous")
                 .map(atonNode::getTag)
                 .map(AtonTag::getV)
                 .map(S125EnumParser::parseRadarConspicuous)
                 .orElse(null));
-        member.setVisuallyConspicuous(Optional.of(s125TagKeyPrefix+"visually_conspicuous")
+        member.setVisualProminence(Optional.of(s125TagKeyPrefix+"visually_conspicuous")
                 .map(atonNode::getTag)
                 .map(AtonTag::getV)
-                .map(S125EnumParser::parseVisuallyConspicuous)
+                .map(S125EnumParser::parseVisualProminence)
                 .orElse(null));
         member.getStatuses().addAll(Optional.of("seamark:status")
                 .map(atonNode::getTag)
@@ -397,8 +361,8 @@ public class S125DatasetBuilder {
                         Collections.singletonList(this.generatePointProperty(Arrays.asList(atonNode.getLon(), atonNode.getLat())))
                 )
                 .stream()
-                .filter(GenericBeaconType.Geometry.class::isInstance)
-                .map(GenericBeaconType.Geometry.class::cast)
+                .filter(BeaconCardinalImpl.Geometry.class::isInstance)
+                .map(BeaconCardinalImpl.Geometry.class::cast)
                 .forEach(member.getGeometries()::add);
 
         // And return the populated member
@@ -411,8 +375,8 @@ public class S125DatasetBuilder {
      * @param atonNode      The AtoN node to be used for the member
      * @return The S-125 Dataset member section generated
      */
-    protected BeaconLateralType generateBeaconLateral(AtonNode atonNode) {
-        final BeaconLateralType member = new BeaconLateralType();
+    protected BeaconLateral generateBeaconLateral(AtonNode atonNode) {
+        final BeaconLateral member = new BeaconLateralImpl();
         final String tagKeyPrefix = "seamark:beacon_lateral:";
         final String s125TagKeyPrefix = "s125:aidsToNavigation:generic_beacon:";
         this.populateS125AidsToNavigationFields(member, atonNode);
@@ -435,7 +399,7 @@ public class S125DatasetBuilder {
                 .map(atonNode::getTag)
                 .map(AtonTag::getV)
                 .filter(StringUtils::isNotBlank)
-                .map(BigDecimal::new)
+                .map(Double::parseDouble)
                 .orElse(null));
         member.setMarksNavigationalSystemOf(Optional.of(tagKeyPrefix+"system")
                 .map(atonNode::getTag)
@@ -447,23 +411,15 @@ public class S125DatasetBuilder {
                 .map(AtonTag::getV)
                 .map(S125EnumParser::parseNatureOfConstruction)
                 .orElse(null));
-        member.setObjectName(Optional.of("seamark:name")
-                .map(atonNode::getTag)
-                .map(AtonTag::getV)
-                .orElse(null));
-        member.setObjectNameInNationalLanguage(Optional.of("seamark:name")
-                .map(atonNode::getTag)
-                .map(AtonTag::getV)
-                .orElse(null));
         member.setRadarConspicuous(Optional.of(s125TagKeyPrefix+"radar_conspicuous")
                 .map(atonNode::getTag)
                 .map(AtonTag::getV)
                 .map(S125EnumParser::parseRadarConspicuous)
                 .orElse(null));
-        member.setVisuallyConspicuous(Optional.of(s125TagKeyPrefix+"visually_conspicuous")
+        member.setVisualProminence(Optional.of(s125TagKeyPrefix+"visually_conspicuous")
                 .map(atonNode::getTag)
                 .map(AtonTag::getV)
-                .map(S125EnumParser::parseVisuallyConspicuous)
+                .map(S125EnumParser::parseVisualProminence)
                 .orElse(null));
         member.getStatuses().addAll(Optional.of("seamark:status")
                 .map(atonNode::getTag)
@@ -482,8 +438,8 @@ public class S125DatasetBuilder {
                         Collections.singletonList(this.generatePointProperty(Arrays.asList(atonNode.getLon(), atonNode.getLat())))
                 )
                 .stream()
-                .filter(GenericBeaconType.Geometry.class::isInstance)
-                .map(GenericBeaconType.Geometry.class::cast)
+                .filter(BeaconLateralImpl.Geometry.class::isInstance)
+                .map(BeaconLateralImpl.Geometry.class::cast)
                 .forEach(member.getGeometries()::add);
 
         // And return the populated member
@@ -497,8 +453,8 @@ public class S125DatasetBuilder {
      * @param atonNode      The AtoN node to be used for the member
      * @return The S-125 Dataset member section generated
      */
-    protected BeaconIsolatedDangerType generateBeaconIsolatedDanger(AtonNode atonNode) {
-        final BeaconIsolatedDangerType member = new BeaconIsolatedDangerType();
+    protected BeaconIsolatedDanger generateBeaconIsolatedDanger(AtonNode atonNode) {
+        final BeaconIsolatedDanger member = new BeaconIsolatedDangerImpl();
         final String tagKeyPrefix = "seamark:beacon_isolated_danger:";
         final String s125TagKeyPrefix = "s125:aidsToNavigation:generic_beacon:";
         this.populateS125AidsToNavigationFields(member, atonNode);
@@ -521,7 +477,7 @@ public class S125DatasetBuilder {
                 .map(atonNode::getTag)
                 .map(AtonTag::getV)
                 .filter(StringUtils::isNotBlank)
-                .map(BigDecimal::new)
+                .map(Double::parseDouble)
                 .orElse(null));
         member.setMarksNavigationalSystemOf(Optional.of(tagKeyPrefix+"system")
                 .map(atonNode::getTag)
@@ -533,23 +489,15 @@ public class S125DatasetBuilder {
                 .map(AtonTag::getV)
                 .map(S125EnumParser::parseNatureOfConstruction)
                 .orElse(null));
-        member.setObjectName(Optional.of("seamark:name")
-                .map(atonNode::getTag)
-                .map(AtonTag::getV)
-                .orElse(null));
-        member.setObjectNameInNationalLanguage(Optional.of("seamark:name")
-                .map(atonNode::getTag)
-                .map(AtonTag::getV)
-                .orElse(null));
         member.setRadarConspicuous(Optional.of(s125TagKeyPrefix+"radar_conspicuous")
                 .map(atonNode::getTag)
                 .map(AtonTag::getV)
                 .map(S125EnumParser::parseRadarConspicuous)
                 .orElse(null));
-        member.setVisuallyConspicuous(Optional.of(s125TagKeyPrefix+"visually_conspicuous")
+        member.setVisualProminence(Optional.of(s125TagKeyPrefix+"visually_conspicuous")
                 .map(atonNode::getTag)
                 .map(AtonTag::getV)
-                .map(S125EnumParser::parseVisuallyConspicuous)
+                .map(S125EnumParser::parseVisualProminence)
                 .orElse(null));
         member.getStatuses().addAll(Optional.of("seamark:status")
                 .map(atonNode::getTag)
@@ -563,8 +511,8 @@ public class S125DatasetBuilder {
                         Collections.singletonList(this.generatePointProperty(Arrays.asList(atonNode.getLon(), atonNode.getLat())))
                 )
                 .stream()
-                .filter(GenericBeaconType.Geometry.class::isInstance)
-                .map(GenericBeaconType.Geometry.class::cast)
+                .filter(BeaconIsolatedDangerImpl.Geometry.class::isInstance)
+                .map(BeaconIsolatedDangerImpl.Geometry.class::cast)
                 .forEach(member.getGeometries()::add);
 
         // And return the populated member
@@ -577,8 +525,8 @@ public class S125DatasetBuilder {
      * @param atonNode      The AtoN node to be used for the member
      * @return The S-125 Dataset member section generated
      */
-    protected BeaconSafeWaterType generateBeaconSafeWater(AtonNode atonNode) {
-        final BeaconSafeWaterType member = new BeaconSafeWaterType();
+    protected BeaconSafeWater generateBeaconSafeWater(AtonNode atonNode) {
+        final BeaconSafeWater member = new BeaconSafeWaterImpl();
         final String tagKeyPrefix = "seamark:beacon_safe_water:";
         final String s125TagKeyPrefix = "s125:aidsToNavigation:generic_beacon:";
         this.populateS125AidsToNavigationFields(member, atonNode);
@@ -601,7 +549,7 @@ public class S125DatasetBuilder {
                 .map(atonNode::getTag)
                 .map(AtonTag::getV)
                 .filter(StringUtils::isNotBlank)
-                .map(BigDecimal::new)
+                .map(Double::parseDouble)
                 .orElse(null));
         member.setMarksNavigationalSystemOf(Optional.of(tagKeyPrefix+"system")
                 .map(atonNode::getTag)
@@ -613,23 +561,15 @@ public class S125DatasetBuilder {
                 .map(AtonTag::getV)
                 .map(S125EnumParser::parseNatureOfConstruction)
                 .orElse(null));
-        member.setObjectName(Optional.of("seamark:name")
-                .map(atonNode::getTag)
-                .map(AtonTag::getV)
-                .orElse(null));
-        member.setObjectNameInNationalLanguage(Optional.of("seamark:name")
-                .map(atonNode::getTag)
-                .map(AtonTag::getV)
-                .orElse(null));
         member.setRadarConspicuous(Optional.of(s125TagKeyPrefix+"radar_conspicuous")
                 .map(atonNode::getTag)
                 .map(AtonTag::getV)
                 .map(S125EnumParser::parseRadarConspicuous)
                 .orElse(null));
-        member.setVisuallyConspicuous(Optional.of(s125TagKeyPrefix+"visually_conspicuous")
+        member.setVisualProminence(Optional.of(s125TagKeyPrefix+"visually_conspicuous")
                 .map(atonNode::getTag)
                 .map(AtonTag::getV)
-                .map(S125EnumParser::parseVisuallyConspicuous)
+                .map(S125EnumParser::parseVisualProminence)
                 .orElse(null));
         member.getStatuses().addAll(Optional.of("seamark:status")
                 .map(atonNode::getTag)
@@ -643,8 +583,8 @@ public class S125DatasetBuilder {
                         Collections.singletonList(this.generatePointProperty(Arrays.asList(atonNode.getLon(), atonNode.getLat())))
                 )
                 .stream()
-                .filter(GenericBeaconType.Geometry.class::isInstance)
-                .map(GenericBeaconType.Geometry.class::cast)
+                .filter(BeaconSafeWaterImpl.Geometry.class::isInstance)
+                .map(BeaconSafeWaterImpl.Geometry.class::cast)
                 .forEach(member.getGeometries()::add);
 
         // And return the populated member
@@ -658,8 +598,8 @@ public class S125DatasetBuilder {
      * @param atonNode      The AtoN node to be used for the member
      * @return The S-125 Dataset member section generated
      */
-    protected BeaconSpecialPurposeGeneralType generateBeaconSpecialPurpose(AtonNode atonNode) {
-        final BeaconSpecialPurposeGeneralType member = new BeaconSpecialPurposeGeneralType();
+    protected BeaconSpecialPurposeGeneral generateBeaconSpecialPurpose(AtonNode atonNode) {
+        final BeaconSpecialPurposeGeneral member = new BeaconSpecialPurposeGeneralImpl();
         final String tagKeyPrefix = "seamark:beacon_special_purpose:";
         final String s125TagKeyPrefix = "s125:aidsToNavigation:generic_beacon:";
         this.populateS125AidsToNavigationFields(member, atonNode);
@@ -682,7 +622,7 @@ public class S125DatasetBuilder {
                 .map(atonNode::getTag)
                 .map(AtonTag::getV)
                 .filter(StringUtils::isNotBlank)
-                .map(BigDecimal::new)
+                .map(Double::parseDouble)
                 .orElse(null));
         member.setMarksNavigationalSystemOf(Optional.of(tagKeyPrefix+"system")
                 .map(atonNode::getTag)
@@ -694,23 +634,15 @@ public class S125DatasetBuilder {
                 .map(AtonTag::getV)
                 .map(S125EnumParser::parseNatureOfConstruction)
                 .orElse(null));
-        member.setObjectName(Optional.of("seamark:name")
-                .map(atonNode::getTag)
-                .map(AtonTag::getV)
-                .orElse(null));
-        member.setObjectNameInNationalLanguage(Optional.of("seamark:name")
-                .map(atonNode::getTag)
-                .map(AtonTag::getV)
-                .orElse(null));
         member.setRadarConspicuous(Optional.of(s125TagKeyPrefix+"radar_conspicuous")
                 .map(atonNode::getTag)
                 .map(AtonTag::getV)
                 .map(S125EnumParser::parseRadarConspicuous)
                 .orElse(null));
-        member.setVisuallyConspicuous(Optional.of(s125TagKeyPrefix+"isually_conspicuous")
+        member.setVisualProminence(Optional.of(s125TagKeyPrefix+"isually_conspicuous")
                 .map(atonNode::getTag)
                 .map(AtonTag::getV)
-                .map(S125EnumParser::parseVisuallyConspicuous)
+                .map(S125EnumParser::parseVisualProminence)
                 .orElse(null));
         member.getStatuses().addAll(Optional.of("seamark:status")
                 .map(atonNode::getTag)
@@ -729,8 +661,8 @@ public class S125DatasetBuilder {
                         Collections.singletonList(this.generatePointProperty(Arrays.asList(atonNode.getLon(), atonNode.getLat())))
                 )
                 .stream()
-                .filter(GenericBeaconType.Geometry.class::isInstance)
-                .map(GenericBeaconType.Geometry.class::cast)
+                .filter(BeaconSpecialPurposeGeneralImpl.Geometry.class::isInstance)
+                .map(BeaconSpecialPurposeGeneralImpl.Geometry.class::cast)
                 .forEach(member.getGeometries()::add);
 
         // And return the populated member
@@ -743,8 +675,8 @@ public class S125DatasetBuilder {
      * @param atonNode      The AtoN node to be used for the member
      * @return The S-125 Dataset member section generated
      */
-    protected BuoyCardinalType generateBuoyCardinal(AtonNode atonNode) {
-        final BuoyCardinalType member = new BuoyCardinalType();
+    protected BuoyCardinal generateBuoyCardinal(AtonNode atonNode) {
+        final BuoyCardinal member = new BuoyCardinalImpl();
         final String tagKeyPrefix = "seamark:buoy_cardinal:";
         final String s125TagKeyPrefix = "s125:aidsToNavigation:generic_buoy:";
         this.populateS125AidsToNavigationFields(member, atonNode);
@@ -768,20 +700,12 @@ public class S125DatasetBuilder {
                 .map(AtonTag::getV)
                 .map(S125EnumParser::parseMarksNavigationalSystemOf)
                 .orElse(null));
-        member.getNatureOfconstuctions().add(Optional.of(s125TagKeyPrefix+"nature_of_construction")
+        member.getNatureOfConstructions().add(Optional.of(s125TagKeyPrefix+"nature_of_construction")
                 .map(atonNode::getTag)
                 .map(AtonTag::getV)
                 .map(S125EnumParser::parseNatureOfConstruction)
                 .orElse(null));
-        member.setObjectName(Optional.of("seamark:name")
-                .map(atonNode::getTag)
-                .map(AtonTag::getV)
-                .orElse(null));
-        member.setObjectNameInNationalLanguage(Optional.of("seamark:name")
-                .map(atonNode::getTag)
-                .map(AtonTag::getV)
-                .orElse(null));
-        member.setRadarConspicious(Optional.of(s125TagKeyPrefix+"radar_conspicuous")
+        member.setRadarConspicuous(Optional.of(s125TagKeyPrefix+"radar_conspicuous")
                 .map(atonNode::getTag)
                 .map(AtonTag::getV)
                 .map(S125EnumParser::parseRadarConspicuous)
@@ -803,8 +727,8 @@ public class S125DatasetBuilder {
                         Collections.singletonList(this.generatePointProperty(Arrays.asList(atonNode.getLon(), atonNode.getLat())))
                 )
                 .stream()
-                .filter(GenericBuoyType.Geometry.class::isInstance)
-                .map(GenericBuoyType.Geometry.class::cast)
+                .filter(BuoyCardinalImpl.Geometry.class::isInstance)
+                .map(BuoyCardinalImpl.Geometry.class::cast)
                 .forEach(member.getGeometries()::add);
 
         // And return the populated member
@@ -817,8 +741,8 @@ public class S125DatasetBuilder {
      * @param atonNode      The AtoN node to be used for the member
      * @return The S-125 Dataset member section generated
      */
-    protected BuoyLateralType generateBuoyLateral(AtonNode atonNode) {
-        final BuoyLateralType member = new BuoyLateralType();
+    protected BuoyLateral generateBuoyLateral(AtonNode atonNode) {
+        final BuoyLateral member = new BuoyLateralImpl();
         final String tagKeyPrefix = "seamark:buoy_lateral:";
         final String s125TagKeyPrefix = "s125:aidsToNavigation:generic_buoy:";
         this.populateS125AidsToNavigationFields(member, atonNode);
@@ -842,20 +766,12 @@ public class S125DatasetBuilder {
                 .map(AtonTag::getV)
                 .map(S125EnumParser::parseMarksNavigationalSystemOf)
                 .orElse(null));
-        member.getNatureOfconstuctions().add(Optional.of(s125TagKeyPrefix+"nature_of_construction")
+        member.getNatureOfConstructions().add(Optional.of(s125TagKeyPrefix+"nature_of_construction")
                 .map(atonNode::getTag)
                 .map(AtonTag::getV)
                 .map(S125EnumParser::parseNatureOfConstruction)
                 .orElse(null));
-        member.setObjectName(Optional.of("seamark:name")
-                .map(atonNode::getTag)
-                .map(AtonTag::getV)
-                .orElse(null));
-        member.setObjectNameInNationalLanguage(Optional.of("seamark:name")
-                .map(atonNode::getTag)
-                .map(AtonTag::getV)
-                .orElse(null));
-        member.setRadarConspicious(Optional.of(s125TagKeyPrefix+"radar_conspicuous")
+        member.setRadarConspicuous(Optional.of(s125TagKeyPrefix+"radar_conspicuous")
                 .map(atonNode::getTag)
                 .map(AtonTag::getV)
                 .map(S125EnumParser::parseRadarConspicuous)
@@ -877,8 +793,8 @@ public class S125DatasetBuilder {
                         Collections.singletonList(this.generatePointProperty(Arrays.asList(atonNode.getLon(), atonNode.getLat())))
                 )
                 .stream()
-                .filter(GenericBuoyType.Geometry.class::isInstance)
-                .map(GenericBuoyType.Geometry.class::cast)
+                .filter(BuoyLateralImpl.Geometry.class::isInstance)
+                .map(BuoyLateralImpl.Geometry.class::cast)
                 .forEach(member.getGeometries()::add);
 
         // And return the populated member
@@ -891,8 +807,8 @@ public class S125DatasetBuilder {
      * @param atonNode      The AtoN node to be used for the member
      * @return The S-125 Dataset member section generated
      */
-    protected BuoyInstallationType generateBuoyInstallation(AtonNode atonNode) {
-        final BuoyInstallationType member = new BuoyInstallationType();
+    protected BuoyInstallation generateBuoyInstallation(AtonNode atonNode) {
+        final BuoyInstallation member = new BuoyInstallationImpl();
         final String tagKeyPrefix = "seamark:buoy_installation:";
         final String s125TagKeyPrefix = "s125:aidsToNavigation:generic_buoy:";
         this.populateS125AidsToNavigationFields(member, atonNode);
@@ -916,20 +832,12 @@ public class S125DatasetBuilder {
                 .map(AtonTag::getV)
                 .map(S125EnumParser::parseMarksNavigationalSystemOf)
                 .orElse(null));
-        member.getNatureOfconstuctions().add(Optional.of(s125TagKeyPrefix+"nature_of_construction")
+        member.getNatureOfConstructions().add(Optional.of(s125TagKeyPrefix+"nature_of_construction")
                 .map(atonNode::getTag)
                 .map(AtonTag::getV)
                 .map(S125EnumParser::parseNatureOfConstruction)
                 .orElse(null));
-        member.setObjectName(Optional.of("seamark:name")
-                .map(atonNode::getTag)
-                .map(AtonTag::getV)
-                .orElse(null));
-        member.setObjectNameInNationalLanguage(Optional.of("seamark:name")
-                .map(atonNode::getTag)
-                .map(AtonTag::getV)
-                .orElse(null));
-        member.setRadarConspicious(Optional.of(s125TagKeyPrefix+"radar_conspicuous")
+        member.setRadarConspicuous(Optional.of(s125TagKeyPrefix+"radar_conspicuous")
                 .map(atonNode::getTag)
                 .map(AtonTag::getV)
                 .map(S125EnumParser::parseRadarConspicuous)
@@ -951,8 +859,8 @@ public class S125DatasetBuilder {
                         Collections.singletonList(this.generatePointProperty(Arrays.asList(atonNode.getLon(), atonNode.getLat())))
                 )
                 .stream()
-                .filter(GenericBuoyType.Geometry.class::isInstance)
-                .map(GenericBuoyType.Geometry.class::cast)
+                .filter(BuoyInstallationImpl.Geometry.class::isInstance)
+                .map(BuoyInstallationImpl.Geometry.class::cast)
                 .forEach(member.getGeometries()::add);
 
         // And return the populated member
@@ -965,8 +873,8 @@ public class S125DatasetBuilder {
      * @param atonNode      The AtoN node to be used for the member
      * @return The S-125 Dataset member section generated
      */
-    protected BuoyIsolatedDangerType generateBuoyIsolatedDanger(AtonNode atonNode) {
-        final BuoyIsolatedDangerType member = new BuoyIsolatedDangerType();
+    protected BuoyIsolatedDanger generateBuoyIsolatedDanger(AtonNode atonNode) {
+        final BuoyIsolatedDanger member = new BuoyIsolatedDangerImpl();
         final String tagKeyPrefix = "seamark:buoy_isolated_danger:";
         final String s125TagKeyPrefix = "s125:aidsToNavigation:generic_buoy:";
         this.populateS125AidsToNavigationFields(member, atonNode);
@@ -990,20 +898,12 @@ public class S125DatasetBuilder {
                 .map(AtonTag::getV)
                 .map(S125EnumParser::parseMarksNavigationalSystemOf)
                 .orElse(null));
-        member.getNatureOfconstuctions().add(Optional.of(s125TagKeyPrefix+"nature_of_construction")
+        member.getNatureOfConstructions().add(Optional.of(s125TagKeyPrefix+"nature_of_construction")
                 .map(atonNode::getTag)
                 .map(AtonTag::getV)
                 .map(S125EnumParser::parseNatureOfConstruction)
                 .orElse(null));
-        member.setObjectName(Optional.of("seamark:name")
-                .map(atonNode::getTag)
-                .map(AtonTag::getV)
-                .orElse(null));
-        member.setObjectNameInNationalLanguage(Optional.of("seamark:name")
-                .map(atonNode::getTag)
-                .map(AtonTag::getV)
-                .orElse(null));
-        member.setRadarConspicious(Optional.of(s125TagKeyPrefix+"radar_conspicuous")
+        member.setRadarConspicuous(Optional.of(s125TagKeyPrefix+"radar_conspicuous")
                 .map(atonNode::getTag)
                 .map(AtonTag::getV)
                 .map(S125EnumParser::parseRadarConspicuous)
@@ -1020,8 +920,8 @@ public class S125DatasetBuilder {
                         Collections.singletonList(this.generatePointProperty(Arrays.asList(atonNode.getLon(), atonNode.getLat())))
                 )
                 .stream()
-                .filter(GenericBuoyType.Geometry.class::isInstance)
-                .map(GenericBuoyType.Geometry.class::cast)
+                .filter(BuoyIsolatedDangerImpl.Geometry.class::isInstance)
+                .map(BuoyIsolatedDangerImpl.Geometry.class::cast)
                 .forEach(member.getGeometries()::add);
 
         // And return the populated member
@@ -1034,8 +934,8 @@ public class S125DatasetBuilder {
      * @param atonNode      The AtoN node to be used for the member
      * @return The S-125 Dataset member section generated
      */
-    protected BuoySafeWaterType generateBuoySafeWater(AtonNode atonNode) {
-        final BuoySafeWaterType member = new BuoySafeWaterType();
+    protected BuoySafeWater generateBuoySafeWater(AtonNode atonNode) {
+        final BuoySafeWater member = new BuoySafeWaterImpl();
         final String tagKeyPrefix = "seamark:buoy_safe_water:";
         final String s125TagKeyPrefix = "s125:aidsToNavigation:generic_buoy:";
         this.populateS125AidsToNavigationFields(member, atonNode);
@@ -1059,20 +959,12 @@ public class S125DatasetBuilder {
                 .map(AtonTag::getV)
                 .map(S125EnumParser::parseMarksNavigationalSystemOf)
                 .orElse(null));
-        member.getNatureOfconstuctions().add(Optional.of(s125TagKeyPrefix+"nature_of_construction")
+        member.getNatureOfConstructions().add(Optional.of(s125TagKeyPrefix+"nature_of_construction")
                 .map(atonNode::getTag)
                 .map(AtonTag::getV)
                 .map(S125EnumParser::parseNatureOfConstruction)
                 .orElse(null));
-        member.setObjectName(Optional.of("seamark:name")
-                .map(atonNode::getTag)
-                .map(AtonTag::getV)
-                .orElse(null));
-        member.setObjectNameInNationalLanguage(Optional.of("seamark:name")
-                .map(atonNode::getTag)
-                .map(AtonTag::getV)
-                .orElse(null));
-        member.setRadarConspicious(Optional.of(s125TagKeyPrefix+"radar_conspicuous")
+        member.setRadarConspicuous(Optional.of(s125TagKeyPrefix+"radar_conspicuous")
                 .map(atonNode::getTag)
                 .map(AtonTag::getV)
                 .map(S125EnumParser::parseRadarConspicuous)
@@ -1089,8 +981,8 @@ public class S125DatasetBuilder {
                         Collections.singletonList(this.generatePointProperty(Arrays.asList(atonNode.getLon(), atonNode.getLat())))
                 )
                 .stream()
-                .filter(GenericBuoyType.Geometry.class::isInstance)
-                .map(GenericBuoyType.Geometry.class::cast)
+                .filter(BuoySafeWaterImpl.Geometry.class::isInstance)
+                .map(BuoySafeWaterImpl.Geometry.class::cast)
                 .forEach(member.getGeometries()::add);
 
         // And return the populated member
@@ -1103,8 +995,8 @@ public class S125DatasetBuilder {
      * @param atonNode      The AtoN node to be used for the member
      * @return The S-125 Dataset member section generated
      */
-    protected BuoySpecialPurposeGeneralType generateBuoySpecialPurpose(AtonNode atonNode) {
-        final BuoySpecialPurposeGeneralType member = new BuoySpecialPurposeGeneralType();
+    protected BuoySpecialPurposeGeneral generateBuoySpecialPurpose(AtonNode atonNode) {
+        final BuoySpecialPurposeGeneral member = new BuoySpecialPurposeGeneralImpl();
         final String tagKeyPrefix = "seamark:buoy_special_purpose:";
         final String s125TagKeyPrefix = "s125:aidsToNavigation:generic_buoy:";
         this.populateS125AidsToNavigationFields(member, atonNode);
@@ -1128,20 +1020,12 @@ public class S125DatasetBuilder {
                 .map(AtonTag::getV)
                 .map(S125EnumParser::parseMarksNavigationalSystemOf)
                 .orElse(null));
-        member.getNatureOfconstuctions().add(Optional.of(s125TagKeyPrefix+"nature_of_construction")
+        member.getNatureOfConstructions().add(Optional.of(s125TagKeyPrefix+"nature_of_construction")
                 .map(atonNode::getTag)
                 .map(AtonTag::getV)
                 .map(S125EnumParser::parseNatureOfConstruction)
                 .orElse(null));
-        member.setObjectName(Optional.of("seamark:name")
-                .map(atonNode::getTag)
-                .map(AtonTag::getV)
-                .orElse(null));
-        member.setObjectNameInNationalLanguage(Optional.of("seamark:name")
-                .map(atonNode::getTag)
-                .map(AtonTag::getV)
-                .orElse(null));
-        member.setRadarConspicious(Optional.of(s125TagKeyPrefix+"radar_conspicuous")
+        member.setRadarConspicuous(Optional.of(s125TagKeyPrefix+"radar_conspicuous")
                 .map(atonNode::getTag)
                 .map(AtonTag::getV)
                 .map(S125EnumParser::parseRadarConspicuous)
@@ -1163,8 +1047,8 @@ public class S125DatasetBuilder {
                         Collections.singletonList(this.generatePointProperty(Arrays.asList(atonNode.getLon(), atonNode.getLat())))
                 )
                 .stream()
-                .filter(GenericBuoyType.Geometry.class::isInstance)
-                .map(GenericBuoyType.Geometry.class::cast)
+                .filter(BuoySpecialPurposeGeneralImpl.Geometry.class::isInstance)
+                .map(BuoySpecialPurposeGeneralImpl.Geometry.class::cast)
                 .forEach(member.getGeometries()::add);
 
         // And return the populated member
@@ -1178,7 +1062,7 @@ public class S125DatasetBuilder {
      * @return The S-125 Dataset member section generated
      */
     protected LandmarkType generateLandmark(AtonNode atonNode) {
-        final LandmarkType member = new LandmarkType();
+        final LandmarkType member = new LandmarkTypeImpl();
         final String tagKeyPrefix = "seamark:landmark:";
         final String s125TagKeyPrefix = "s125:aidsToNavigation:landmark:";
         this.populateS125AidsToNavigationFields(member, atonNode);
@@ -1192,44 +1076,36 @@ public class S125DatasetBuilder {
                 .map(AtonTag::getV)
                 .map(t -> S125EnumParser.splitAndParse(t, S125EnumParser::parseColour))
                 .orElse(Collections.emptyList()));
-        member.getColourPatterns().addAll(Optional.of(tagKeyPrefix+"colour_pattern")
+        member.setColourPattern(Optional.of(tagKeyPrefix+"colour_pattern")
                 .map(atonNode::getTag)
                 .map(AtonTag::getV)
-                .map(t -> S125EnumParser.splitAndParse(t, S125EnumParser::parseColourPattern))
-                .orElse(Collections.emptyList()));
+                .map(S125EnumParser::parseColourPattern)
+                .orElse(null));
         member.getFunctions().addAll(Optional.of(tagKeyPrefix+"function")
                 .map(atonNode::getTag)
                 .map(AtonTag::getV)
                 .map(t -> S125EnumParser.splitAndParse(t, S125EnumParser::parseFunction))
                 .orElse(Collections.emptyList()));
-        member.setHeight(Optional.of(s125TagKeyPrefix+"height")
+        member.getHeights().add(Optional.of(s125TagKeyPrefix+"height")
                 .map(atonNode::getTag)
                 .map(AtonTag::getV)
                 .filter(StringUtils::isNotBlank)
-                .map(BigDecimal::new)
+                .map(Double::parseDouble)
                 .orElse(null));
         member.getNatureOfConstructions().addAll(Optional.of(tagKeyPrefix+"construction")
                 .map(atonNode::getTag)
                 .map(AtonTag::getV)
                 .map(t -> S125EnumParser.splitAndParse(t, S125EnumParser::parseNatureOfConstruction))
                 .orElse(Collections.emptyList()));
-        member.setObjectName(Optional.of("seamark:name")
-                .map(atonNode::getTag)
-                .map(AtonTag::getV)
-                .orElse(null));
-        member.setObjectNameInNationalLanguage(Optional.of("seamark:name")
-                .map(atonNode::getTag)
-                .map(AtonTag::getV)
-                .orElse(null));
         member.setRadarConspicuous(Optional.of(s125TagKeyPrefix+"radar_conspicuous")
                 .map(atonNode::getTag)
                 .map(AtonTag::getV)
                 .map(S125EnumParser::parseRadarConspicuous)
                 .orElse(null));
-        member.setVisuallyConspicuous(Optional.of(tagKeyPrefix+"conspicuity")
+        member.setVisualProminence(Optional.of(tagKeyPrefix+"conspicuity")
                 .map(atonNode::getTag)
                 .map(AtonTag::getV)
-                .map(S125EnumParser::parseVisuallyConspicuous)
+                .map(S125EnumParser::parseVisualProminence)
                 .orElse(null));
         member.getStatuses().addAll(Optional.of("seamark:status")
                 .map(atonNode::getTag)
@@ -1257,8 +1133,8 @@ public class S125DatasetBuilder {
      * @param atonNode      The AtoN node to be used for the member
      * @return The S-125 Dataset member section generated
      */
-    protected LighthouseType generateLighthouse(AtonNode atonNode) {
-        final LighthouseType member = new LighthouseType();
+    protected Lighthouse generateLighthouse(AtonNode atonNode) {
+        final Lighthouse member = new LighthouseImpl();
         final String tagKeyPrefix = "seamark:landmark:";
         final String s125TagKeyPrefix = "s125:aidsToNavigation:lighthouse:";
         this.populateS125AidsToNavigationFields(member, atonNode);
@@ -1272,44 +1148,36 @@ public class S125DatasetBuilder {
                 .map(AtonTag::getV)
                 .map(t -> S125EnumParser.splitAndParse(t, S125EnumParser::parseColour))
                 .orElse(Collections.emptyList()));
-        member.getColourPatterns().addAll(Optional.of(tagKeyPrefix+"colour_pattern")
+        member.setColourPattern(Optional.of(tagKeyPrefix+"colour_pattern")
                 .map(atonNode::getTag)
                 .map(AtonTag::getV)
-                .map(t -> S125EnumParser.splitAndParse(t, S125EnumParser::parseColourPattern))
-                .orElse(Collections.emptyList()));
+                .map(S125EnumParser::parseColourPattern)
+                .orElse(null));
         member.getFunctions().addAll(Optional.of(tagKeyPrefix+"function")
                 .map(atonNode::getTag)
                 .map(AtonTag::getV)
                 .map(t -> S125EnumParser.splitAndParse(t, S125EnumParser::parseFunction))
                 .orElse(Collections.emptyList()));
-        member.setHeight(Optional.of(s125TagKeyPrefix+"height")
+        member.getHeights().add(Optional.of(s125TagKeyPrefix+"height")
                 .map(atonNode::getTag)
                 .map(AtonTag::getV)
                 .filter(StringUtils::isNotBlank)
-                .map(BigDecimal::new)
+                .map(Double::parseDouble)
                 .orElse(null));
         member.getNatureOfConstructions().addAll(Optional.of(tagKeyPrefix+"construction")
                 .map(atonNode::getTag)
                 .map(AtonTag::getV)
                 .map(t -> S125EnumParser.splitAndParse(t, S125EnumParser::parseNatureOfConstruction))
                 .orElse(Collections.emptyList()));
-        member.setObjectName(Optional.of("seamark:name")
-                .map(atonNode::getTag)
-                .map(AtonTag::getV)
-                .orElse(null));
-        member.setObjectNameInNationalLanguage(Optional.of("seamark:name")
-                .map(atonNode::getTag)
-                .map(AtonTag::getV)
-                .orElse(null));
         member.setRadarConspicuous(Optional.of(s125TagKeyPrefix+"radar_conspicuous")
                 .map(atonNode::getTag)
                 .map(AtonTag::getV)
                 .map(S125EnumParser::parseRadarConspicuous)
                 .orElse(null));
-        member.setVisuallyConspicuous(Optional.of(tagKeyPrefix+"conspicuity")
+        member.setVisualProminence(Optional.of(tagKeyPrefix+"conspicuity")
                 .map(atonNode::getTag)
                 .map(AtonTag::getV)
-                .map(S125EnumParser::parseVisuallyConspicuous)
+                .map(S125EnumParser::parseVisualProminence)
                 .orElse(null));
         member.getStatuses().addAll(Optional.of("seamark:status")
                 .map(atonNode::getTag)
@@ -1323,8 +1191,8 @@ public class S125DatasetBuilder {
                         Collections.singletonList(this.generatePointProperty(Arrays.asList(atonNode.getLon(), atonNode.getLat())))
                 )
                 .stream()
-                .filter(LighthouseType.Geometry.class::isInstance)
-                .map(LighthouseType.Geometry.class::cast)
+                .filter(LighthouseImpl.Geometry.class::isInstance)
+                .map(LighthouseImpl.Geometry.class::cast)
                 .forEach(member.getGeometries()::add);
 
         // And return the populated member
@@ -1337,8 +1205,8 @@ public class S125DatasetBuilder {
      * @param atonNode      The AtoN node to be used for the member
      * @return The S-125 Dataset member section generated
      */
-    protected LightVesselType generateLightVessel(AtonNode atonNode) {
-        final LightVesselType member = new LightVesselType();
+    protected LightVessel generateLightVessel(AtonNode atonNode) {
+        final LightVessel member = new LightVesselImpl();
         final String tagKeyPrefix = "seamark:light_vessel:";
         final String s125TagKeyPrefix = "s125:aidsToNavigation:light_vessel:";
         this.populateS125AidsToNavigationFields(member, atonNode);
@@ -1347,33 +1215,20 @@ public class S125DatasetBuilder {
                 .map(AtonTag::getV)
                 .map(t -> S125EnumParser.splitAndParse(t, S125EnumParser::parseColour))
                 .orElse(Collections.emptyList()));
-        member.getColourPatterns().addAll(Optional.of(tagKeyPrefix+"colour_pattern")
+        member.setColourPattern(Optional.of(tagKeyPrefix+"colour_pattern")
                 .map(atonNode::getTag)
                 .map(AtonTag::getV)
-                .map(t -> S125EnumParser.splitAndParse(t, S125EnumParser::parseColourPattern))
-                .orElse(Collections.emptyList()));
+                .map(S125EnumParser::parseColourPattern)
+                .orElse(null));
         member.getNatureOfConstructions().addAll(Optional.of(s125TagKeyPrefix+"nature_of_construction")
                 .map(atonNode::getTag)
                 .map(AtonTag::getV)
                 .map(t -> S125EnumParser.splitAndParse(t, S125EnumParser::parseNatureOfConstruction))
                 .orElse(Collections.emptyList()));
-        member.setObjectName(Optional.of("seamark:name")
+        member.setVisualProminence(Optional.of(s125TagKeyPrefix+"visually_conspicuous")
                 .map(atonNode::getTag)
                 .map(AtonTag::getV)
-                .orElse(null));
-        member.setObjectNameInNationalLanguage(Optional.of("seamark:name")
-                .map(atonNode::getTag)
-                .map(AtonTag::getV)
-                .orElse(null));
-        member.setRadarConspicuous(Optional.of(s125TagKeyPrefix+"radar_conspicuous")
-                .map(atonNode::getTag)
-                .map(AtonTag::getV)
-                .map(S125EnumParser::parseRadarConspicuous)
-                .orElse(null));
-        member.setVisuallyConspicuous(Optional.of(s125TagKeyPrefix+"visually_conspicuous")
-                .map(atonNode::getTag)
-                .map(AtonTag::getV)
-                .map(S125EnumParser::parseVisuallyConspicuous)
+                .map(S125EnumParser::parseVisualProminence)
                 .orElse(null));
         member.getStatuses().addAll(Optional.of("seamark:status")
                 .map(atonNode::getTag)
@@ -1387,8 +1242,8 @@ public class S125DatasetBuilder {
                         Collections.singletonList(this.generatePointProperty(Arrays.asList(atonNode.getLon(), atonNode.getLat())))
                 )
                 .stream()
-                .filter(LightVesselType.Geometry.class::isInstance)
-                .map(LightVesselType.Geometry.class::cast)
+                .filter(LightVesselImpl.Geometry.class::isInstance)
+                .map(LightVesselImpl.Geometry.class::cast)
                 .forEach(member.getGeometries()::add);
 
         // And return the populated member
@@ -1401,8 +1256,8 @@ public class S125DatasetBuilder {
      * @param atonNode      The AtoN node to be used for the member
      * @return The S-125 Dataset member section generated
      */
-    protected VirtualAISAidToNavigationType generateVirtualAtoN(AtonNode atonNode) {
-        final VirtualAISAidToNavigationType member = new VirtualAISAidToNavigationType();
+    protected VirtualAISAidToNavigation generateVirtualAtoN(AtonNode atonNode) {
+        final VirtualAISAidToNavigation member = new VirtualAISAidToNavigationImpl();
         final String tagKeyPrefix = "seamark:radio_station:";
         final String s125TagKeyPrefix = "s125:aidsToNavigation:virtual_ais_aid_to_navigation:";
         this.populateS125AidsToNavigationFields(member, atonNode);
@@ -1410,7 +1265,7 @@ public class S125DatasetBuilder {
                 .map(atonNode::getTag)
                 .map(AtonTag::getV)
                 .filter(StringUtils::isNotBlank)
-                .map(BigDecimal::new)
+                .map(BigInteger::new)
                 .orElse(null));
         member.setMMSICode(Optional.of(tagKeyPrefix+"mmsi")
                 .map(atonNode::getTag)
@@ -1418,15 +1273,7 @@ public class S125DatasetBuilder {
                 .filter(StringUtils::isNotBlank)
                 .map(BigInteger::new)
                 .orElse(null));
-        member.setObjectName(Optional.of("seamark:name")
-                .map(atonNode::getTag)
-                .map(AtonTag::getV)
-                .orElse(null));
-        member.setObjectNameInNationalLanguage(Optional.of("seamark:name")
-                .map(atonNode::getTag)
-                .map(AtonTag::getV)
-                .orElse(null));
-        member.setStatus(Optional.of("seamark:status")
+        member.getStatuses().add(Optional.of("seamark:status")
                 .map(atonNode::getTag)
                 .map(AtonTag::getV)
                 .map(S125EnumParser::parseStatus)
@@ -1444,8 +1291,8 @@ public class S125DatasetBuilder {
                         Collections.singletonList(this.generatePointProperty(Arrays.asList(atonNode.getLon(), atonNode.getLat())))
                 )
                 .stream()
-                .filter(VirtualAISAidToNavigationType.Geometry.class::isInstance)
-                .map(VirtualAISAidToNavigationType.Geometry.class::cast)
+                .filter(VirtualAISAidToNavigationImpl.Geometry.class::isInstance)
+                .map(VirtualAISAidToNavigationImpl.Geometry.class::cast)
                 .forEach(member.getGeometries()::add);
 
         // And return the populated member
@@ -1458,12 +1305,12 @@ public class S125DatasetBuilder {
      * @param atonNode      The AtoN node to be used for the member
      * @return The S-125 Dataset member section generated
      */
-    protected DaymarkType generateDaymark(AtonNode atonNode) {
-        final DaymarkType member = new DaymarkType();
+    protected Daymark generateDaymark(AtonNode atonNode) {
+        final Daymark member = new DaymarkImpl();
         final String tagKeyPrefix = "seamark:daymark:";
         final String s125TagKeyPrefix = "s125:aidsToNavigation:daymark:";
         this.populateS125AidsToNavigationFields(member, atonNode);
-        member.setCategoryOfSpecialPurposeMark(Optional.of(tagKeyPrefix+"category")
+        member.getCategoryOfSpecialPurposeMarks().add(Optional.of(tagKeyPrefix+"category")
                 .map(atonNode::getTag)
                 .map(AtonTag::getV)
                 .map(S125EnumParser::parseCategoryOfSpecialPurposeMark)
@@ -1473,30 +1320,22 @@ public class S125DatasetBuilder {
                 .map(AtonTag::getV)
                 .map(t -> S125EnumParser.splitAndParse(t, S125EnumParser::parseColour))
                 .orElse(Collections.emptyList()));
-        member.getColourPatterns().addAll(Optional.of(tagKeyPrefix+"colour_pattern")
+        member.setColourPattern(Optional.of(tagKeyPrefix+"colour_pattern")
                 .map(atonNode::getTag)
                 .map(AtonTag::getV)
-                .map(t -> S125EnumParser.splitAndParse(t, S125EnumParser::parseColourPattern))
-                .orElse(Collections.emptyList()));
+                .map(S125EnumParser::parseColourPattern)
+                .orElse(null));
         member.setHeight(Optional.of(s125TagKeyPrefix+"height")
                 .map(atonNode::getTag)
                 .map(AtonTag::getV)
                 .filter(StringUtils::isNotBlank)
-                .map(BigDecimal::new)
+                .map(Double::parseDouble)
                 .orElse(null));
         member.getNatureOfConstructions().addAll(Optional.of(tagKeyPrefix+"nature_of_construction")
                 .map(atonNode::getTag)
                 .map(AtonTag::getV)
                 .map(t -> S125EnumParser.splitAndParse(t, S125EnumParser::parseNatureOfConstruction))
                 .orElse(Collections.emptyList()));
-        member.setObjectName(Optional.of("seamark:name")
-                .map(atonNode::getTag)
-                .map(AtonTag::getV)
-                .orElse(null));
-        member.setObjectNameInNationalLanguage(Optional.of("seamark:name")
-                .map(atonNode::getTag)
-                .map(AtonTag::getV)
-                .orElse(null));
         member.getStatuses().addAll(Optional.of("seamark:status")
                 .map(atonNode::getTag)
                 .map(AtonTag::getV)
@@ -1505,7 +1344,6 @@ public class S125DatasetBuilder {
         member.setTopmarkDaymarkShape(Optional.of(tagKeyPrefix + "shape")
                 .map(atonNode::getTag)
                 .map(AtonTag::getV)
-                .map(S125EnumParser::parseTopmarkDaymarkShape)
                 .orElse(null));
 
         // Now fix the geometry...
@@ -1514,56 +1352,8 @@ public class S125DatasetBuilder {
                         Collections.singletonList(this.generatePointProperty(Arrays.asList(atonNode.getLon(), atonNode.getLat())))
                 )
                 .stream()
-                .filter(DaymarkType.Geometry.class::isInstance)
-                .map(DaymarkType.Geometry.class::cast)
-                .forEach(member.getGeometries()::add);
-
-        // And return the populated member
-        return member;
-    }
-
-    /**
-     * Generate the S-125 Dataset member section for Environment Observation
-     * Equipment Type AtoNs.
-     *
-     * @param atonNode      The AtoN node to be used for the member
-     * @return The S-125 Dataset member section generated
-     */
-    protected EnvironmentObservationEquipmentType generateEnvironmentObservationEquipment(AtonNode atonNode) {
-        final EnvironmentObservationEquipmentType member = new EnvironmentObservationEquipmentType();
-        final String tagKeyPrefix = "seamark:platform:";
-        final String s125TagKeyPrefix = "s125:aidsToNavigation:environment_observation_equipment:";
-        this.populateS125AidsToNavigationFields(member, atonNode);
-        member.getStatuses().addAll(Optional.of("seamark:status")
-                .map(atonNode::getTag)
-                .map(AtonTag::getV)
-                .map(t -> S125EnumParser.splitAndParse(t, S125EnumParser::parseStatus))
-                .orElse(Collections.emptyList()));
-        member.setHeight(Optional.of(tagKeyPrefix+"height")
-                .map(atonNode::getTag)
-                .map(AtonTag::getV)
-                .filter(StringUtils::isNotBlank)
-                .map(BigDecimal::new)
-                .orElse(null));
-        member.getTypeOfEnvironmentObservationEquipments().addAll(Optional.of(s125TagKeyPrefix + "type")
-                .map(atonNode::getTag)
-                .map(AtonTag::getV)
-                 .map(t -> t.split(","))
-                .map(Arrays::asList)
-                .orElse(Collections.emptyList()));
-        member.setTypeOfBattery(Optional.of(s125TagKeyPrefix + "type_of_battery")
-                .map(atonNode::getTag)
-                .map(AtonTag::getV)
-                .orElse(null));
-
-        // Now fix the geometry...
-        S125Utils.generateS125AidsToNavigationTypeGeometriesList(
-                        member.getClass(),
-                        Collections.singletonList(this.generatePointProperty(Arrays.asList(atonNode.getLon(), atonNode.getLat())))
-                )
-                .stream()
-                .filter(EnvironmentObservationEquipmentType.Geometry.class::isInstance)
-                .map(EnvironmentObservationEquipmentType.Geometry.class::cast)
+                .filter(DaymarkImpl.Geometry.class::isInstance)
+                .map(DaymarkImpl.Geometry.class::cast)
                 .forEach(member.getGeometries()::add);
 
         // And return the populated member
@@ -1576,8 +1366,8 @@ public class S125DatasetBuilder {
      * @param atonNode      The AtoN node to be used for the member
      * @return The S-125 Dataset member section generated
      */
-    protected FogSignalType generateFogSignal(AtonNode atonNode) {
-        final FogSignalType member = new FogSignalType();
+    protected FogSignal generateFogSignal(AtonNode atonNode) {
+        final FogSignal member = new FogSignalImpl();
         final String tagKeyPrefix = "seamark:fog_signal:";
         final String s125TagKeyPrefix = "s125:aidsToNavigation:fog_signal:";
         this.populateS125AidsToNavigationFields(member, atonNode);
@@ -1602,8 +1392,8 @@ public class S125DatasetBuilder {
                         Collections.singletonList(this.generatePointProperty(Arrays.asList(atonNode.getLon(), atonNode.getLat())))
                 )
                 .stream()
-                .filter(FogSignalType.Geometry.class::isInstance)
-                .map(FogSignalType.Geometry.class::cast)
+                .filter(FogSignalImpl.Geometry.class::isInstance)
+                .map(FogSignalImpl.Geometry.class::cast)
                 .forEach(member.getGeometries()::add);
 
         // And return the populated member
@@ -1616,12 +1406,12 @@ public class S125DatasetBuilder {
      * @param atonNode      The AtoN node to be used for the member
      * @return The S-125 Dataset member section generated
      */
-    protected LightType generateLight(AtonNode atonNode) {
-        final LightType member = new LightType();
+    protected Light generateLight(AtonNode atonNode) {
+        final Light member = new LightImpl();
         final String tagKeyPrefix = "seamark:light:";
         final String s125TagKeyPrefix = "s125:aidsToNavigation:light:";
         this.populateS125AidsToNavigationFields(member, atonNode);
-        member.setColour(Optional.of(tagKeyPrefix+"colour")
+        member.getColours().add(Optional.of(tagKeyPrefix+"colour")
                 .map(atonNode::getTag)
                 .map(AtonTag::getV)
                 .map(S125EnumParser::parseColour)
@@ -1630,14 +1420,6 @@ public class S125DatasetBuilder {
                 .map(atonNode::getTag)
                 .map(AtonTag::getV)
                 .map(S125EnumParser::parseLightCategory)
-                .orElse(null));
-        member.setObjectName(Optional.of("seamark:name")
-                .map(atonNode::getTag)
-                .map(AtonTag::getV)
-                .orElse(null));
-        member.setObjectNameInNationalLanguage(Optional.of("seamark:name")
-                .map(atonNode::getTag)
-                .map(AtonTag::getV)
                 .orElse(null));
         member.setExhibitionConditionOfLight(Optional.of(tagKeyPrefix+"exhibition")
                 .map(atonNode::getTag)
@@ -1648,7 +1430,7 @@ public class S125DatasetBuilder {
                 .map(atonNode::getTag)
                 .map(AtonTag::getV)
                 .filter(StringUtils::isNotBlank)
-                .map(BigDecimal::new)
+                .map(Double::parseDouble)
                 .orElse(null));
         member.setLightCharacteristic(Optional.of(tagKeyPrefix+"character")
                 .map(atonNode::getTag)
@@ -1659,12 +1441,6 @@ public class S125DatasetBuilder {
                 .map(atonNode::getTag)
                 .map(AtonTag::getV)
                 .map(v -> {try {return LightVisibilityType.fromValue(v);} catch (Exception ex) {return null;}})
-                .orElse(null));
-        member.setOrientation(Optional.of(s125TagKeyPrefix+"orientation")
-                .map(atonNode::getTag)
-                .map(AtonTag::getV)
-                .filter(StringUtils::isNotBlank)
-                .map(BigDecimal::new)
                 .orElse(null));
         member.setMultiplicityOfLights(Optional.of(tagKeyPrefix+"multiple")
                 .map(atonNode::getTag)
@@ -1679,6 +1455,7 @@ public class S125DatasetBuilder {
         member.setSignalPeriod(Optional.of(tagKeyPrefix+"period")
                 .map(atonNode::getTag)
                 .map(AtonTag::getV)
+                .map(Double::parseDouble)
                 .orElse(null));
         member.getStatuses().addAll(Optional.of("seamark:status")
                 .map(atonNode::getTag)
@@ -1689,7 +1466,7 @@ public class S125DatasetBuilder {
                 .map(atonNode::getTag)
                 .map(AtonTag::getV)
                 .filter(StringUtils::isNotBlank)
-                .map(BigDecimal::new)
+                .map(Double::parseDouble)
                 .orElse(null));
 
         // Now fix the geometry...
@@ -1698,8 +1475,8 @@ public class S125DatasetBuilder {
                         Collections.singletonList(this.generatePointProperty(Arrays.asList(atonNode.getLon(), atonNode.getLat())))
                 )
                 .stream()
-                .filter(LightType.Geometry.class::isInstance)
-                .map(LightType.Geometry.class::cast)
+                .filter(LightImpl.Geometry.class::isInstance)
+                .map(LightImpl.Geometry.class::cast)
                 .forEach(member.getGeometries()::add);
 
         // And return the populated member
@@ -1712,8 +1489,8 @@ public class S125DatasetBuilder {
      * @param atonNode      The AtoN node to be used for the member
      * @return The S-125 Dataset member section generated
      */
-    protected RadarReflectorType generateRadarReflector(AtonNode atonNode) {
-        final RadarReflectorType member = new RadarReflectorType();
+    protected RadarReflector generateRadarReflector(AtonNode atonNode) {
+        final RadarReflector member = new RadarReflectorImpl();
         final String tagKeyPrefix = "seamark:radar_reflector:";
         final String s125TagKeyPrefix = "s125:aidsToNavigation:radar_reflector:";
         this.populateS125AidsToNavigationFields(member, atonNode);
@@ -1726,7 +1503,7 @@ public class S125DatasetBuilder {
                 .map(atonNode::getTag)
                 .map(AtonTag::getV)
                 .filter(StringUtils::isNotBlank)
-                .map(BigDecimal::new)
+                .map(Double::parseDouble)
                 .orElse(null));
 
         // Now fix the geometry...
@@ -1735,8 +1512,8 @@ public class S125DatasetBuilder {
                         Collections.singletonList(this.generatePointProperty(Arrays.asList(atonNode.getLon(), atonNode.getLat())))
                 )
                 .stream()
-                .filter(RadarReflectorType.Geometry.class::isInstance)
-                .map(RadarReflectorType.Geometry.class::cast)
+                .filter(RadarReflectorImpl.Geometry.class::isInstance)
+                .map(RadarReflectorImpl.Geometry.class::cast)
                 .forEach(member.getGeometries()::add);
 
         // And return the populated member
@@ -1749,8 +1526,8 @@ public class S125DatasetBuilder {
      * @param atonNode      The AtoN node to be used for the member
      * @return The S-125 Dataset member section generated
      */
-    protected RetroReflectorType generateRetroReflector(AtonNode atonNode) {
-        final RetroReflectorType member = new RetroReflectorType();
+    protected RetroReflector generateRetroReflector(AtonNode atonNode) {
+        final RetroReflector member = new RetroReflectorImpl();
         final String tagKeyPrefix = "seamark:retro_reflector:";
         final String s125TagKeyPrefix = "s125:aidsToNavigation:retro_reflector:";
         this.populateS125AidsToNavigationFields(member, atonNode);
@@ -1781,8 +1558,8 @@ public class S125DatasetBuilder {
                         Collections.singletonList(this.generatePointProperty(Arrays.asList(atonNode.getLon(), atonNode.getLat())))
                 )
                 .stream()
-                .filter(RetroReflectorType.Geometry.class::isInstance)
-                .map(RetroReflectorType.Geometry.class::cast)
+                .filter(RetroReflectorImpl.Geometry.class::isInstance)
+                .map(RetroReflectorImpl.Geometry.class::cast)
                 .forEach(member.getGeometries()::add);
 
         // And return the populated member
@@ -1795,8 +1572,8 @@ public class S125DatasetBuilder {
      * @param atonNode      The AtoN node to be used for the member
      * @return The S-125 Dataset member section generated
      */
-    protected SiloTankType generateSiloTank(AtonNode atonNode) {
-        final SiloTankType member = new SiloTankType();
+    protected SiloTank generateSiloTank(AtonNode atonNode) {
+        final SiloTank member = new SiloTankImpl();
         final String tagKeyPrefix = "seamark:tank:";
         final String s125TagKeyPrefix = "s125:aidsToNavigation:silo_tank:";
         this.populateS125AidsToNavigationFields(member, atonNode);
@@ -1820,29 +1597,21 @@ public class S125DatasetBuilder {
                 .map(AtonTag::getV)
                 .map(t -> S125EnumParser.splitAndParse(t, S125EnumParser::parseColourPattern))
                 .orElse(Collections.emptyList()));
-        member.setObjectName(Optional.of("seamark:name")
-                .map(atonNode::getTag)
-                .map(AtonTag::getV)
-                .orElse(null));
-        member.setObjectNameInNationalLanguage(Optional.of("seamark:name")
-                .map(atonNode::getTag)
-                .map(AtonTag::getV)
-                .orElse(null));
         member.setRadarConspicuous(Optional.of(s125TagKeyPrefix+"radar_conspicuous")
                 .map(atonNode::getTag)
                 .map(AtonTag::getV)
                 .map(S125EnumParser::parseRadarConspicuous)
                 .orElse(null));
-        member.setVisuallyConspicuous(Optional.of(s125TagKeyPrefix+"visually_conspicuous")
+        member.setVisualProminence(Optional.of(s125TagKeyPrefix+"visually_conspicuous")
                 .map(atonNode::getTag)
                 .map(AtonTag::getV)
-                .map(S125EnumParser::parseVisuallyConspicuous)
+                .map(S125EnumParser::parseVisualProminence)
                 .orElse(null));
         member.setHeight(Optional.of(s125TagKeyPrefix+"height")
                 .map(atonNode::getTag)
                 .map(AtonTag::getV)
                 .filter(StringUtils::isNotBlank)
-                .map(BigDecimal::new)
+                .map(Double::parseDouble)
                 .orElse(null));
         member.getStatuses().addAll(Optional.of("seamark:status")
                 .map(atonNode::getTag)
@@ -1856,8 +1625,8 @@ public class S125DatasetBuilder {
                         Collections.singletonList(this.generatePointProperty(Arrays.asList(atonNode.getLon(), atonNode.getLat())))
                 )
                 .stream()
-                .filter(SiloTankType.Geometry.class::isInstance)
-                .map(SiloTankType.Geometry.class::cast)
+                .filter(SiloTankImpl.Geometry.class::isInstance)
+                .map(SiloTankImpl.Geometry.class::cast)
                 .forEach(member.getGeometries()::add);
 
         // And return the populated member
@@ -1870,8 +1639,8 @@ public class S125DatasetBuilder {
      * @param atonNode      The AtoN node to be used for the member
      * @return The S-125 Dataset member section generated
      */
-    protected TopmarkType generateTopmark(AtonNode atonNode) {
-        final TopmarkType member = new TopmarkType();
+    protected Topmark generateTopmark(AtonNode atonNode) {
+        final Topmark member = new TopmarkImpl();
         final String tagKeyPrefix = "seamark:topmark:";
         final String s125TagKeyPrefix = "s125:aidsToNavigation:topmark:";
         this.populateS125AidsToNavigationFields(member, atonNode);
@@ -1880,11 +1649,11 @@ public class S125DatasetBuilder {
                 .map(AtonTag::getV)
                 .map(t -> S125EnumParser.splitAndParse(t, S125EnumParser::parseColour))
                 .orElse(Collections.emptyList()));
-        member.getColourPatterns().addAll(Optional.of(tagKeyPrefix+"colour_pattern")
+        member.setColourPattern(Optional.of(tagKeyPrefix+"colour_pattern")
                 .map(atonNode::getTag)
                 .map(AtonTag::getV)
-                .map(t -> S125EnumParser.splitAndParse(t, S125EnumParser::parseColourPattern))
-                .orElse(Collections.emptyList()));
+                .map(S125EnumParser::parseColourPattern)
+                .orElse(null));
         member.getStatuses().addAll(Optional.of("seamark:status")
                 .map(atonNode::getTag)
                 .map(AtonTag::getV)
@@ -1893,7 +1662,6 @@ public class S125DatasetBuilder {
         member.setTopmarkDaymarkShape(Optional.of(tagKeyPrefix + "shape")
                 .map(atonNode::getTag)
                 .map(AtonTag::getV)
-                .map(S125EnumParser::parseTopmarkDaymarkShape)
                 .orElse(null));
 
         // Now fix the geometry...
@@ -1902,8 +1670,8 @@ public class S125DatasetBuilder {
                         Collections.singletonList(this.generatePointProperty(Arrays.asList(atonNode.getLon(), atonNode.getLat())))
                 )
                 .stream()
-                .filter(TopmarkType.Geometry.class::isInstance)
-                .map(TopmarkType.Geometry.class::cast)
+                .filter(TopmarkImpl.Geometry.class::isInstance)
+                .map(TopmarkImpl.Geometry.class::cast)
                 .forEach(member.getGeometries()::add);
 
         // And return the populated member
@@ -1916,8 +1684,8 @@ public class S125DatasetBuilder {
      * @param atonNode      The AtoN node to be used for the member
      * @return The S-125 Dataset member section generated
      */
-    protected RadioStationType generateRadioStation(AtonNode atonNode) {
-        final RadioStationType member = new RadioStationType();
+    protected RadioStation generateRadioStation(AtonNode atonNode) {
+        final RadioStation member = new RadioStationImpl();
         final String tagKeyPrefix = "seamark:radio_station:";
         final String s125TagKeyPrefix = "s125:aidsToNavigation:radio_station:";
         this.populateS125AidsToNavigationFields(member, atonNode);
@@ -1938,8 +1706,8 @@ public class S125DatasetBuilder {
                         Collections.singletonList(this.generatePointProperty(Arrays.asList(atonNode.getLon(), atonNode.getLat())))
                 )
                 .stream()
-                .filter(TopmarkType.Geometry.class::isInstance)
-                .map(TopmarkType.Geometry.class::cast)
+                .filter(RadioStationImpl.Geometry.class::isInstance)
+                .map(RadioStationImpl.Geometry.class::cast)
                 .forEach(member.getGeometries()::add);
 
         // And return the populated member
@@ -1952,8 +1720,8 @@ public class S125DatasetBuilder {
      * @param atonNode      The AtoN node to be used for the member
      * @return The S-125 Dataset member section generated
      */
-    protected RadarTransponderBeaconType generateRadarTransponderBeacon(AtonNode atonNode) {
-        final RadarTransponderBeaconType member = new RadarTransponderBeaconType();
+    protected RadarTransponderBeacon generateRadarTransponderBeacon(AtonNode atonNode) {
+        final RadarTransponderBeacon member = new RadarTransponderBeaconImpl();
         final String tagKeyPrefix = "seamark:radar_transponder:";
         final String s125TagKeyPrefix = "s125:aidsToNavigation:radar_transponder:";
         this.populateS125AidsToNavigationFields(member, atonNode);
@@ -1970,13 +1738,13 @@ public class S125DatasetBuilder {
                 .map(atonNode::getTag)
                 .map(AtonTag::getV)
                 .filter(StringUtils::isNotBlank)
-                 .map(BigDecimal::new)
+                 .map(Double::parseDouble)
                 .orElse(null));
         member.setSectorLimitTwo(Optional.of(tagKeyPrefix+"sector_end")
                 .map(atonNode::getTag)
                 .map(AtonTag::getV)
                 .filter(StringUtils::isNotBlank)
-                .map(BigDecimal::new)
+                .map(Double::parseDouble)
                 .orElse(null));
         member.setSignalGroup(Optional.of(tagKeyPrefix+"group")
                 .map(atonNode::getTag)
@@ -1995,7 +1763,7 @@ public class S125DatasetBuilder {
                 .map(atonNode::getTag)
                 .map(AtonTag::getV)
                 .filter(StringUtils::isNotBlank)
-                .map(BigDecimal::new)
+                .map(Double::parseDouble)
                 .orElse(null));
 
         // Now fix the geometry...
@@ -2004,8 +1772,8 @@ public class S125DatasetBuilder {
                         Collections.singletonList(this.generatePointProperty(Arrays.asList(atonNode.getLon(), atonNode.getLat())))
                 )
                 .stream()
-                .filter(TopmarkType.Geometry.class::isInstance)
-                .map(TopmarkType.Geometry.class::cast)
+                .filter(RadarTransponderBeaconImpl.Geometry.class::isInstance)
+                .map(RadarTransponderBeaconImpl.Geometry.class::cast)
                 .forEach(member.getGeometries()::add);
 
         // And return the populated member
@@ -2018,8 +1786,8 @@ public class S125DatasetBuilder {
      * @param atonNode      The AtoN node to be used for the member
      * @return The S-125 Dataset member section generated
      */
-    protected PhysicalAISAidToNavigationType generatePhysicalAISAtoN(AtonNode atonNode) {
-        final PhysicalAISAidToNavigationType member = new PhysicalAISAidToNavigationType();
+    protected PhysicalAISAidToNavigation generatePhysicalAISAtoN(AtonNode atonNode) {
+        final PhysicalAISAidToNavigation member = new PhysicalAISAidToNavigationImpl();
         final String tagKeyPrefix = "seamark:radio_station:";
         final String s125TagKeyPrefix = "s125:aidsToNavigation:ais_aid_to_navigation:";
         this.populateS125AidsToNavigationFields(member, atonNode);
@@ -2027,7 +1795,7 @@ public class S125DatasetBuilder {
                 .map(atonNode::getTag)
                 .map(AtonTag::getV)
                 .filter(StringUtils::isNotBlank)
-                .map(BigDecimal::new)
+                .map(BigInteger::new)
                 .orElse(null));
         member.setMMSICode(Optional.of(tagKeyPrefix+"mmsi")
                 .map(atonNode::getTag)
@@ -2035,15 +1803,7 @@ public class S125DatasetBuilder {
                 .filter(StringUtils::isNotBlank)
                 .map(BigInteger::new)
                 .orElse(null));
-        member.setObjectName(Optional.of("seamark:name")
-                .map(atonNode::getTag)
-                .map(AtonTag::getV)
-                .orElse(null));
-        member.setObjectNameInNationalLanguage(Optional.of("seamark:name")
-                .map(atonNode::getTag)
-                .map(AtonTag::getV)
-                .orElse(null));
-        member.setStatus(Optional.of("seamark:status")
+        member.getStatuses().add(Optional.of("seamark:status")
                 .map(atonNode::getTag)
                 .map(AtonTag::getV)
                 .map(S125EnumParser::parseStatus)
@@ -2055,8 +1815,8 @@ public class S125DatasetBuilder {
                         Collections.singletonList(this.generatePointProperty(Arrays.asList(atonNode.getLon(), atonNode.getLat())))
                 )
                 .stream()
-                .filter(PhysicalAISAidToNavigationType.Geometry.class::isInstance)
-                .map(PhysicalAISAidToNavigationType.Geometry.class::cast)
+                .filter(PhysicalAISAidToNavigationImpl.Geometry.class::isInstance)
+                .map(PhysicalAISAidToNavigationImpl.Geometry.class::cast)
                 .forEach(member.getGeometries()::add);
 
         // And return the populated member
@@ -2074,35 +1834,15 @@ public class S125DatasetBuilder {
      */
     public <R extends AidsToNavigationType> void populateS125AidsToNavigationFields(R member, AtonNode atonNode) {
         // First read the AtoN type information from the input
-        final S125AtonTypes atonType = S125AtonTypes.fromSeamarkType(atonNode.getTagValue(TAG_ATON_TYPE));
         final String s125TagKeyPrefix = "s125:aidsToNavigation:";
 
         // Now populate the fields
         member.setId(this.generateId(atonNode.getId()));
         member.setBoundedBy(this.generateBoundingShape(Collections.singletonList(atonNode)));
-        member.setAtonNumber(Optional.of("mrn")
+        member.setIdCode(Optional.of("mrn")
                 .map(atonNode::getTag)
                 .map(AtonTag::getV)
                 .orElse(atonNode.getAtonUid()));
-        member.setIdCode("aton.uk." + atonNode.getAtonUid().toLowerCase());
-        member.setTextualDescription(String.format("%s", Optional.of("seamark:name")
-                .map(atonNode::getTag)
-                .map(AtonTag::getV)
-                .orElse("Unknown")));
-        member.setTextualDescriptionInNationalLanguage(String.format("%s", Optional.of("seamark:name")
-                .map(atonNode::getTag)
-                .map(AtonTag::getV)
-                .orElse("Unknown")));
-        member.getInformations().addAll(Optional.of(s125TagKeyPrefix+"information")
-                .map(atonNode::getTag)
-                .map(AtonTag::getV)
-                .map(t -> S125EnumParser.splitAndParse(t, String::valueOf))
-                .orElse(Collections.emptyList()));
-        member.getInformationInNationalLanguages().addAll(Optional.of(s125TagKeyPrefix+"information_in_national_language")
-                .map(atonNode::getTag)
-                .map(AtonTag::getV)
-                .map(t -> S125EnumParser.splitAndParse(t, String::valueOf))
-                .orElse(Collections.emptyList()));
         member.setDateStart(Optional.of(s125TagKeyPrefix+"date_start")
                 .map(atonNode::getTag)
                 .map(AtonTag::getV)
@@ -2130,6 +1870,32 @@ public class S125DatasetBuilder {
                 .map(BigInteger::new)
                 .orElse(null));
 
+        // Add the feature names
+        member.getFeatureNames().add(Optional.of("seamark:name")
+                .map(atonNode::getTag)
+                .map(AtonTag::getV)
+                .map(value -> {
+                    final FeatureNameType featureNameType = new FeatureNameTypeImpl();
+                    featureNameType.setName(value);
+                    featureNameType.setLanguage(Locale.UK.getISO3Language());
+                    featureNameType.setDisplayName(Boolean.TRUE);
+                    return featureNameType;
+                })
+                .orElse(null));
+
+        // Add the information
+        // TODO: Skip for now since this is left as an integer in the data product
+//        member.getInformations().add(Optional.of(s125TagKeyPrefix+"information")
+//                .map(atonNode::getTag)
+//                .map(AtonTag::getV)
+//                .map(value -> {
+//                    final InformationType informationType = new InformationTypeImpl();
+//                    informationType.setText(value);
+//                    informationType.setLanguage(Locale.UK.getISO3Language());
+//                    return informationType;
+//                })
+//                .orElse(null));
+
         // Also process the child and parent links
         processAidsToNavigationTypeRelationships(member, atonNode);
     }
@@ -2145,19 +1911,21 @@ public class S125DatasetBuilder {
      * @param atonNode      The AtoN node which contains the links
      * @return the updated dataset member entry
      */
-    protected AidsToNavigationType processAidsToNavigationTypeRelationships(AidsToNavigationType member, AtonNode atonNode) {
+    protected void processAidsToNavigationTypeRelationships(AidsToNavigationType member, AtonNode atonNode) {
         // If this is a structure try to populate its child references
         if(member instanceof StructureObjectType) {
-            ((StructureObjectType)member).setchildren(atonNode.getChildren().stream()
+            ((StructureObjectType)member).getchildren().addAll(atonNode
+                    .getChildren()
+                    .stream()
                     .map(child -> {
-                        ReferenceType referenceType = new ReferenceType();
+                        ReferenceType referenceType = new ReferenceTypeImpl();
                         referenceType.setTitle(child.getAtonUid());
                         referenceType.setHref("#" + generateId(child.getId()));
                         referenceType.setRole("child");
                         referenceType.setArcrole(CHILD_REF_ARCHOLE);
                         return referenceType;
                     })
-                    .collect(Collectors.toList()));
+                    .toList());
         }
 
         // If this is an equipment try to populate its parent references
@@ -2165,7 +1933,7 @@ public class S125DatasetBuilder {
             Optional.of(atonNode)
                     .map(AtonNode::getParent)
                     .map(parent -> {
-                        ReferenceType referenceType = new ReferenceType();
+                        ReferenceType referenceType = new ReferenceTypeImpl();
                         referenceType.setTitle(parent.getAtonUid());
                         referenceType.setHref("#" + generateId(parent.getId()));
                         referenceType.setRole("parent");
@@ -2174,8 +1942,6 @@ public class S125DatasetBuilder {
                     })
                     .ifPresent(((EquipmentType)member)::setParent);
         }
-
-        return member;
     }
 
     /**
@@ -2185,26 +1951,26 @@ public class S125DatasetBuilder {
      * @param atonLink      The AtoN link to generate the aggregation for
      * @return the generate aggregation link entry
      */
-    protected AggregationType generateAggregation(AtonLink atonLink) {
+    protected Aggregation generateAggregation(AtonLink atonLink) {
         // Sanity Check
         if(atonLink.getLinkCategory().getAtonLinkType() != AtonLinkType.AGGREGATION) {
             return null;
         }
 
         // Otherwise create the aggregation
-        AggregationType aggregationType = new AggregationType();
+        Aggregation aggregationType = new AggregationImpl();
         aggregationType.setId(this.generateId(null));
         aggregationType.setCategoryOfAggregation(CategoryOfAggregationType.fromValue(atonLink.getLinkCategory().getValue()));
-        aggregationType.setPeers(atonLink.getPeers().stream()
+        aggregationType.getPeers().addAll(atonLink.getPeers().stream()
                 .map(peer -> {
-                    ReferenceType referenceType = new ReferenceType();
+                    ReferenceType referenceType = new ReferenceTypeImpl();
                     referenceType.setTitle(peer.getAtonUid());
                     referenceType.setHref("#" + generateId(peer.getId()));
                     referenceType.setRole("aggregation");
                     referenceType.setArcrole(AGGREGATION_REF_ARCHOLE);
                     return referenceType;
                 })
-                .collect(Collectors.toList()));
+                .toList());
 
         // And return the result
         return aggregationType;
@@ -2217,26 +1983,26 @@ public class S125DatasetBuilder {
      * @param atonLink      The AtoN link to generate the association for
      * @return the generate association link entry
      */
-    protected AssociationType generateAssociation(AtonLink atonLink) {
+    protected Association generateAssociation(AtonLink atonLink) {
         // Sanity Check
         if(atonLink.getLinkCategory().getAtonLinkType() != AtonLinkType.ASSOCIATION) {
             return null;
         }
 
         // Otherwise create the association
-        AssociationType associationType = new AssociationType();
+        Association associationType = new AssociationImpl();
         associationType.setId(this.generateId(null));
         associationType.setCategoryOfAssociation(CategoryOfAssociationType.fromValue(atonLink.getLinkCategory().getValue()));
-        associationType.setPeers(atonLink.getPeers().stream()
+        associationType.getPeers().addAll(atonLink.getPeers().stream()
                 .map(peer -> {
-                    ReferenceType referenceType = new ReferenceType();
+                    ReferenceType referenceType = new ReferenceTypeImpl();
                     referenceType.setTitle(peer.getAtonUid());
                     referenceType.setHref("#" + generateId(peer.getId()));
                     referenceType.setRole("association");
                     referenceType.setArcrole(ASSOCIATION_REF_ARCHOLE);
                     return referenceType;
                 })
-                .collect(Collectors.toList()));
+                .toList());
 
         // And return the result
         return associationType;
@@ -2250,7 +2016,7 @@ public class S125DatasetBuilder {
      * @return the S100 Truncated Date object
      */
     private S100TruncatedDate getS100TruncatedDate(String isoDateTimeString) {
-        S100TruncatedDate s100TruncatedDate = new S100TruncatedDate();
+        S100TruncatedDate s100TruncatedDate = new S100TruncatedDateImpl();
         try {
             Optional.ofNullable(isoDateTimeString)
                     .map(s -> LocalDateTime.parse(s, DateTimeFormatter.ISO_OFFSET_DATE_TIME))
@@ -2272,13 +2038,13 @@ public class S125DatasetBuilder {
      */
     private SurfaceProperty generateSurfaceProperty(Collection<Double> coords) {
         // Generate the elements
-        SurfaceProperty surfaceProperty = new SurfaceProperty();
-        SurfaceType surfaceType = new SurfaceType();
-        Patches patches = new Patches();
-        PolygonPatchType polygonPatchType = new PolygonPatchType();
-        AbstractRingPropertyType abstractRingPropertyType = new AbstractRingPropertyType();
-        LinearRingType linearRingType = new LinearRingType();
-        PosList posList = new PosList();
+        SurfaceProperty surfaceProperty = new SurfacePropertyImpl();
+        SurfaceType surfaceType = new SurfaceTypeImpl();
+        Patches patches = new PatchesImpl();
+        PolygonPatchType polygonPatchType = new PolygonPatchTypeImpl();
+        AbstractRingPropertyType abstractRingPropertyType = new AbstractRingPropertyTypeImpl();
+        LinearRingType linearRingType = new LinearRingTypeImpl();
+        PosList posList = new PosListImpl();
 
         // Populate with the geometry data
         posList.setValue(coords.toArray(new Double[0]));
@@ -2305,11 +2071,11 @@ public class S125DatasetBuilder {
      */
     private CurveProperty generateCurveProperty(Collection<Double> coords) {
         // Generate the elements
-        CurveProperty curveProperty = new CurveProperty();
-        CurveType curveType = new CurveType();
-        Segments segments = new Segments();
-        LineStringSegmentType lineStringSegmentType = new LineStringSegmentType();
-        PosList posList = new PosList();
+        CurveProperty curveProperty = new CurvePropertyImpl();
+        CurveType curveType = new CurveTypeImpl();
+        Segments segments = new SegmentsImpl();
+        LineStringSegmentType lineStringSegmentType = new LineStringSegmentTypeImpl();
+        PosList posList = new PosListImpl();
         
         // Populate with the geometry data
         posList.setValue(coords.toArray(new Double[0]));
@@ -2334,9 +2100,9 @@ public class S125DatasetBuilder {
      */
     protected PointProperty generatePointProperty(Collection<Double> coords) {
         // Generate the elements
-        PointProperty pointProperty = new PointProperty();
-        PointType pointType = new PointType();
-        Pos pos = new Pos();
+        PointProperty pointProperty = new PointPropertyImpl();
+        PointType pointType = new PointTypeImpl();
+        Pos pos = new PosImpl();
 
         // Populate with the geometry data
         pos.setValue(coords.toArray(new Double[0]));
@@ -2364,14 +2130,14 @@ public class S125DatasetBuilder {
                 .map(AtonNode::getGeometry)
                 .forEach(g -> this.enclosingEnvelopFromGeometry(envelope, g));
 
-        Pos lowerCorner = new Pos();
+        Pos lowerCorner = new PosImpl();
         lowerCorner.setValue(new Double[]{envelope.getMinX(), envelope.getMaxY()});
-        Pos upperCorner = new Pos();
+        Pos upperCorner = new PosImpl();
         upperCorner.setValue(new Double[]{envelope.getMaxX(), envelope.getMaxY()});
 
         // And create the bounding by envelope
-        BoundingShapeType boundingShapeType = new BoundingShapeType();
-        EnvelopeType envelopeType = new EnvelopeType();
+        BoundingShapeType boundingShapeType = new BoundingShapeTypeImpl();
+        EnvelopeType envelopeType = new EnvelopeTypeImpl();
         envelopeType.setSrsName("EPSG:4326");
         envelopeType.setLowerCorner(lowerCorner);
         envelopeType.setUpperCorner(upperCorner);
@@ -2386,15 +2152,13 @@ public class S125DatasetBuilder {
      *
      * @param envelope      The envelope to be updated
      * @param geometry      The geometry to update the envelope boundaries with
-     * @return the updates envelope
      */
-    protected Envelope enclosingEnvelopFromGeometry(Envelope envelope, Geometry geometry) {
+    protected void enclosingEnvelopFromGeometry(Envelope envelope, Geometry geometry) {
         final Geometry enclosingGeometry = geometry.getEnvelope();
         final Coordinate[] enclosingCoordinates = enclosingGeometry.getCoordinates();
         for (Coordinate c : enclosingCoordinates) {
             envelope.expandToInclude(c);
         }
-        return envelope;
     }
 
     /**
